# horizon-ai-agents-live

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
.github/workflows/: daily-report-email.yml
app/: __init__.py  agents.py  campaigns.py  config.py  ebay.py  ebay_draft_batch.py  ebay_store_page.py  integrations.py  inventory.py  inventory_seed.py  main.py  media.py  metricool.py  models.py  report_email.py  reports.py  store_sync.py  walmart.py  walmart_public_data.py
data/: exactspec_public_store.csv  inventory_sample.csv
docs/: facebook-group-outreach.md  launch-checklist.md  manychat-payloads.md  prompt.md  slow-mover-outreach.md  zapier-metricool-map.md
scripts/: create_gmail_refresh_token.py  import_ebay_store_url.py  import_inventory_csv.py  post_render_daily_report_email.py  send_daily_report_email.py  send_render_daily_report_email.py  set_secret_env.py  start_service.sh
tests/: test_campaigns.py  test_customer_answers.py  test_customer_webhooks.py  test_ebay_api.py  test_ebay_drafts.py  test_ebay_store_page.py  test_gmail_oauth.py  test_group_outreach.py  test_integrations.py  test_inventory.py  test_media.py  test_report_email_sender.py  test_reports.py  test_slow_mover_outreach.py  test_social_inventory_mode.py  test_social_inventory_refresh.py  test_store_sync.py  test_tiktok_media.py  test_walmart.py  test_walmart_unpublished.py
